translated donation hub

--- a/es/hub/donation/index.html
+++ b/es/hub/donation/index.html
@@ -12,7 +12,8 @@
   </script>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Kidney Donation Overview</title>
+  <title>Donación renal de donante vivo — Tito Necesita un Riñón</title>
+  <meta name="description" content="Quién puede donar, cómo es la evaluación, riesgos, recuperación y vida después de la donación renal de donante vivo, explicado en lenguaje claro." />
   <!-- Google Fonts: Open Sans -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -24,61 +25,61 @@
 <body>
   <div data-include="/includes_es/header.html"></div>
   <main class="content" id="main">
-<div data-include="/includes_es/donation-subnav.html"></div>
+    <div data-include="/includes_es/donation-subnav.html"></div>
 
-<h1>Living Kidney Donation Hub</h1>
-<p>
-  Living kidney donation is an extraordinary gift. This hub explains who can donate,
-  how testing works, the risks, recovery, and life after donation — in plain English.
-</p>
+    <h1>Centro de donación renal (donante vivo)</h1>
+    <p>
+      Donar un riñón en vida es un gesto extraordinario. Este centro explica quién puede donar,
+      cómo funciona la evaluación, los riesgos, la recuperación y la vida después de la donación — todo en lenguaje claro.
+    </p>
 
-<section class="testimonial-summary">
-  <h2><a href="/es/hub/donation/who-can-donate.html" data-evt="donation:who">Who Can Donate?</a></h2>
-  <p>Medical and lifestyle factors for donor eligibility and common reasons a center might say “not now.”</p>
-</section>
+    <section class="testimonial-summary">
+      <h2><a href="/es/hub/donation/who-can-donate.html" data-evt="donation:who">¿Quién puede donar?</a></h2>
+      <p>Factores médicos y de estilo de vida para la elegibilidad del donante y motivos comunes por los que un centro podría decir “por ahora no”.</p>
+    </section>
 
-<section class="testimonial-summary">
-  <h2><a href="/es/hub/donation/testing.html" data-evt="donation:testing">Evaluation &amp; Testing</a></h2>
-  <p>The full donor work-up: labs, imaging, consults, matching, timelines, and what “approved / deferred / declined” mean.</p>
-</section>
+    <section class="testimonial-summary">
+      <h2><a href="/es/hub/donation/testing.html" data-evt="donation:testing">Evaluación y pruebas</a></h2>
+      <p>El estudio completo del donante: análisis, imágenes, consultas, compatibilidad, cronogramas y qué significan “aprobado / diferido / rechazado”.</p>
+    </section>
 
-<section class="testimonial-summary">
-  <h2><a href="/es/hub/donation/risks.html" data-evt="donation:risks">Risks of Donation</a></h2>
-  <p>Short-term surgical risks, long-term considerations (BP, kidney function, pregnancy), and practical/financial notes.</p>
-</section>
+    <section class="testimonial-summary">
+      <h2><a href="/es/hub/donation/risks.html" data-evt="donation:risks">Riesgos de la donación</a></h2>
+      <p>Riesgos quirúrgicos a corto plazo, consideraciones a largo plazo (presión arterial, función renal, embarazo) y notas prácticas/financieras.</p>
+    </section>
 
-<section class="testimonial-summary">
-  <h2><a href="/es/hub/donation/recovery.html" data-evt="donation:recovery">Recovery Process</a></h2>
-  <p>Hospital stay, lifting limits, driving, return-to-work timelines, follow-ups, and when to call the team.</p>
-</section>
+    <section class="testimonial-summary">
+      <h2><a href="/es/hub/donation/recovery.html" data-evt="donation:recovery">Proceso de recuperación</a></h2>
+      <p>Estancia hospitalaria, límites para cargar peso, conducir, tiempos para volver al trabajo, controles y cuándo llamar al equipo.</p>
+    </section>
 
-<section class="testimonial-summary">
-  <h2><a href="/es/hub/donation/life-after.html" data-evt="donation:life-after">Life After Donation</a></h2>
-  <p>Annual checkups, sports, work, family planning, and long-term health habits that keep you well.</p>
-</section>
+    <section class="testimonial-summary">
+      <h2><a href="/es/hub/donation/life-after.html" data-evt="donation:life-after">Vida después de donar</a></h2>
+      <p>Controles anuales, deporte, trabajo, planificación familiar y hábitos de salud a largo plazo para mantenerte bien.</p>
+    </section>
 
-<section class="callout">
-  <p><strong>Independent Living Donor Advocate (ILDA):</strong> You have an advocate on your team whose job is to protect <em>your</em> interests. You can pause or stop the process at any time.</p>
-</section>
+    <section class="callout">
+      <p><strong>Defensor/a Independiente del Donante Vivo (ILDA):</strong> Tienes una persona en tu equipo cuya labor es proteger <em>tus</em> intereses. Puedes pausar o detener el proceso en cualquier momento.</p>
+    </section>
 
-<!-- Optional quick FAQ (nice engagement bump, fully native) -->
-<section>
-  <h2>Quick Questions</h2>
-  <details>
-    <summary>How long does evaluation take?</summary>
-    <p>Often 1–3 months. Fast-tracks exist; complex findings can add time for extra tests or consults.</p>
-  </details>
-  <details>
-    <summary>Who pays for donor testing and surgery?</summary>
-    <p>Typically the recipient’s insurance via the transplant center. Travel/lodging and time off vary by program — ask early.</p>
-  </details>
-  <details>
-    <summary>What if I’m incompatible?</summary>
-    <p>Paired exchange or a non-directed donation chain can still help your intended recipient.</p>
-  </details>
-</section>
+    <!-- FAQ rápido -->
+    <section>
+      <h2>Preguntas rápidas</h2>
+      <details>
+        <summary>¿Cuánto dura la evaluación?</summary>
+        <p>Con frecuencia 1–3 meses. Existen vías rápidas; hallazgos complejos pueden añadir tiempo para pruebas o consultas extra.</p>
+      </details>
+      <details>
+        <summary>¿Quién paga las pruebas y la cirugía del donante?</summary>
+        <p>Por lo general, el seguro del receptor a través del centro de trasplantes. Viaje/estancia y tiempo libre varían según el programa — pregunta con antelación.</p>
+      </details>
+      <details>
+        <summary>¿Qué pasa si soy incompatible?</summary>
+        <p>El intercambio pareado o una cadena de donación no dirigida aún puede ayudar a tu receptor previsto.</p>
+      </details>
+    </section>
 
-<p class="disclaimer">Informational only. Your center’s policies and your medical history control final decisions.</p>
+    <p class="disclaimer">Información educativa. Las políticas de tu centro y tu historial médico determinan las decisiones finales.</p>
 
   </main>
   <div data-include="/includes_es/footer.html"></div>
