--- a/es/hub/donation/life-after.html
+++ b/es/hub/donation/life-after.html
@@ -12,7 +12,8 @@
   </script>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Life After Kidney Donation - Kidney Donation Hub</title>
+  <title>Vida después de donar un riñón — Centro de Donación | Tito Necesita un Riñón</title>
+  <meta name="description" content="La mayoría de los donantes vuelven a una vida plena y activa con un riñón. Recomendaciones prácticas sobre chequeos anuales, deporte, trabajo y planificación familiar." />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
@@ -25,38 +26,40 @@
   <main class="content" id="main">
     <div data-include="/includes_es/donation-subnav.html"></div>
 
-<h1>Life After Kidney Donation</h1>
-<p>Most donors return to full, active lives with one kidney. Long-term health is excellent with routine care and healthy habits.</p>
+    <h1>Vida después de donar un riñón</h1>
+    <p>La mayoría de los donantes retoman vidas plenas y activas con un solo riñón. La salud a largo plazo suele ser excelente con controles de rutina y hábitos saludables.</p>
 
-<h2>Everyday health</h2>
-<ul>
-  <li>Annual checkup: blood pressure, kidney labs, urine check.</li>
-  <li>Hydration: drink regularly, especially with exercise/heat.</li>
-  <li>Avoid chronic NSAID use (ibuprofen/naproxen) unless your doctor approves.</li>
-  <li>Maintain a healthy weight; exercise; don’t smoke.</li>
-</ul>
+    <h2>Salud cotidiana</h2>
+    <ul>
+      <li>Chequeo anual: presión arterial, análisis de función renal y examen de orina.</li>
+      <li>Hidratación: bebe de forma regular, especialmente con ejercicio o calor.</li>
+      <li>Evita el uso crónico de AINE (ibuprofeno/naproxeno) salvo indicación de tu médico.</li>
+      <li>Mantén un peso saludable; haz ejercicio; no fumes.</li>
+    </ul>
 
-<h2>Sports &amp; work</h2>
-<ul>
-  <li>Most sports are fine once healed. For contact/high-impact sports, discuss protection and risks.</li>
-  <li>Work: no long-term restrictions for most jobs after recovery.</li>
-</ul>
+    <h2>Deporte y trabajo</h2>
+    <ul>
+      <li>La mayoría de los deportes están bien una vez recuperado/a. Para deportes de contacto o alto impacto, conversa sobre protección y riesgos.</li>
+      <li>Trabajo: sin restricciones a largo plazo para la mayoría de los empleos después de la recuperación.</li>
+    </ul>
 
-<h2>Family planning</h2>
-<ul>
-  <li>Pregnancy is usually safe after recovery; many centers suggest waiting 6–12 months.</li>
-  <li>Plan close prenatal care; tell your OB you’re a prior donor.</li>
-</ul>
+    <h2>Planificación familiar</h2>
+    <ul>
+      <li>El embarazo suele ser seguro tras la recuperación; muchos centros sugieren esperar 6–12 meses.</li>
+      <li>Planifica un control prenatal cercano; informa a tu obstetra que fuiste donante.</li>
+    </ul>
 
-<h2>Paperwork &amp; support</h2>
-<ul>
-  <li>Keep donor records for future doctors/insurance.</li>
-  <li>It’s normal to feel a lot—proud, anxious, everything between. Reach out to your team or a counselor if needed.</li>
-</ul>
+    <h2>Documentación y apoyo</h2>
+    <ul>
+      <li>Conserva tus registros de donante para futuros médicos/seguros.</li>
+      <li>Es normal sentir mucho—orgullo, ansiedad y todo entre medio. Habla con tu equipo o con un consejero si lo necesitas.</li>
+    </ul>
 
-<div class="callout"><p><strong>Remember:</strong> donation is generous—you still set boundaries and care for your own health first.</p></div>
+    <div class="callout">
+      <p><strong>Recuerda:</strong> la donación es un acto generoso—tú sigues marcando límites y cuidando tu propia salud primero.</p>
+    </div>
 
-<p class="disclaimer">For personal advice, talk to your transplant team or primary care provider.</p>
+    <p class="disclaimer">Para consejos personalizados, consulta a tu equipo de trasplante o a tu médico de atención primaria.</p>
   </main>
   <div data-include="/includes_es/footer.html"></div>
   <script src="/scripts/analytics.js" defer></script>
