--- a/es/hub/donation/recovery.html
+++ b/es/hub/donation/recovery.html
@@ -12,7 +12,8 @@
   </script>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Recovery After Donation - Kidney Donation Hub</title>
+  <title>Recuperación después de la donación — Centro de Donación | Tito Necesita un Riñón</title>
+  <meta name="description" content="Guía clara sobre la recuperación tras donar un riñón: cronograma típico, restricciones, autocuidado y controles de seguimiento." />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
@@ -24,33 +25,36 @@
   <div data-include="/includes_es/header.html"></div>
   <main class="content" id="main">
     <div data-include="/includes_es/donation-subnav.html"></div>
-<h1>Recovery After Donation</h1>
-<p>Recovery is individual. Most donors go home in 1–3 days and return to normal activities within weeks.</p>
 
-<h2>Typical timeline</h2>
-<ul>
-  <li><strong>Hospital (days 1–3):</strong> walking the day of/after surgery, oral pain meds, breathing exercises.</li>
-  <li><strong>Week 1–2:</strong> fatigue is common; short walks daily; no heavy lifting.</li>
-  <li><strong>Weeks 3–6:</strong> light work resumes; desk work often 2–4 weeks, physical jobs 4–8+ weeks with clearance.</li>
-</ul>
+    <h1>Recuperación después de la donación</h1>
+    <p>La recuperación es individual. La mayoría de los donantes vuelven a casa en 1–3 días y retoman actividades normales en pocas semanas.</p>
 
-<h2>Restrictions &amp; self-care</h2>
-<ul>
-  <li>No lifting &gt;10–15 lbs until cleared; avoid core-straining moves early.</li>
-  <li>Use stool softeners with narcotics; hydrate unless told otherwise.</li>
-  <li>Drive when off narcotics and you can turn/brake comfortably.</li>
-  <li>Incision care: keep clean/dry; watch for redness, drainage, fever.</li>
-</ul>
+    <h2>Cronograma típico</h2>
+    <ul>
+      <li><strong>Hospital (días 1–3):</strong> caminar el mismo día o al día siguiente de la cirugía, analgésicos por vía oral, ejercicios respiratorios.</li>
+      <li><strong>Semanas 1–2:</strong> el cansancio es común; caminatas cortas diarias; sin levantar peso.</li>
+      <li><strong>Semanas 3–6:</strong> trabajo ligero; trabajos de oficina a menudo 2–4 semanas, trabajos físicos 4–8+ semanas con autorización.</li>
+    </ul>
 
-<h2>Follow-up</h2>
-<ul>
-  <li>Early clinic checks; many centers repeat labs at 6 months, 1 year, and 2 years.</li>
-  <li>Long-term: annual BP and labs with your primary care.</li>
-</ul>
+    <h2>Restricciones y autocuidado</h2>
+    <ul>
+      <li>No levantar &gt;10–15 lb (&gt;4.5–7 kg) hasta que te autoricen; evita ejercicios que fuercen el core al principio.</li>
+      <li>Usa ablandadores de heces si tomas analgésicos opioides; mantente hidratado/a salvo indicación contraria.</li>
+      <li>Conduce cuando ya no tomes opioides y puedas girar/frenar con comodidad.</li>
+      <li>Cuidado de la incisión: mantener limpia y seca; vigilar enrojecimiento, secreción o fiebre.</li>
+    </ul>
 
-<div class="callout"><p><strong>Call urgently if:</strong> fever &gt;101°F, worsening pain/swelling, shortness of breath, calf pain/swelling, inability to pass urine.</p></div>
+    <h2>Seguimiento</h2>
+    <ul>
+      <li>Controles tempranos en clínica; muchos centros repiten análisis a los 6 meses, 1 año y 2 años.</li>
+      <li>A largo plazo: controles anuales de presión arterial y análisis con tu médico de cabecera.</li>
+    </ul>
 
-<p class="disclaimer">Your team’s instructions overrule this general guidance.</p>
+    <div class="callout">
+      <p><strong>Llama de urgencia si:</strong> fiebre &gt;38.3&nbsp;°C (101&nbsp;°F), dolor/hinchazón en aumento, falta de aire, dolor o hinchazón en la pantorrilla, incapacidad para orinar.</p>
+    </div>
+
+    <p class="disclaimer">Las indicaciones de tu equipo se anteponen a esta guía general.</p>
   </main>
   <div data-include="/includes_es/footer.html"></div>
   <script src="/scripts/analytics.js" defer></script>
