--- a/es/hub/donation/risks.html
+++ b/es/hub/donation/risks.html
@@ -12,7 +12,8 @@
   </script>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Risks of Kidney Donation - Kidney Donation Hub</title>
+  <title>Riesgos de la donación de riñón — Centro de Donación | Tito Necesita un Riñón</title>
+  <meta name="description" content="Riesgos a corto y largo plazo de la donación renal de donante vivo: cirugía, función renal, presión arterial, embarazo, salud mental y aspectos prácticos." />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
@@ -24,35 +25,38 @@
   <div data-include="/includes_es/header.html"></div>
   <main class="content" id="main">
     <div data-include="/includes_es/donation-subnav.html"></div>
-<h1>Risks of Kidney Donation</h1>
-<p>Most donors do well, but all surgery has risks. Know the short-term and long-term considerations.</p>
 
-<h2>Short-term (around surgery)</h2>
-<ul>
-  <li>Anesthesia effects (nausea, rare complications).</li>
-  <li>Bleeding, infection, blood clots.</li>
-  <li>Pain, temporary numbness near incisions.</li>
-  <li>Conversion from laparoscopic to open surgery (rare).</li>
-  <li>Unexpected findings that delay or cancel surgery.</li>
-</ul>
+    <h1>Riesgos de la donación de riñón</h1>
+    <p>La mayoría de los donantes evolucionan bien, pero toda cirugía conlleva riesgos. Conoce las consideraciones a corto y largo plazo.</p>
 
-<h2>Long-term</h2>
-<ul>
-  <li><strong>Kidney function:</strong> remaining kidney compensates; lifetime risk of kidney disease is slightly higher than if you hadn’t donated.</li>
-  <li><strong>Blood pressure:</strong> may rise over time—monitor routinely.</li>
-  <li><strong>Pregnancy:</strong> small increased risk of preeclampsia in future pregnancies.</li>
-  <li><strong>Mental health:</strong> mood changes can occur if outcomes are complicated; support helps.</li>
-</ul>
+    <h2>Corto plazo (alrededor de la cirugía)</h2>
+    <ul>
+      <li>Efectos de la anestesia (náuseas, complicaciones poco frecuentes).</li>
+      <li>Sangrado, infección, coágulos.</li>
+      <li>Dolor, adormecimiento temporal cerca de las incisiones.</li>
+      <li>Conversión de laparoscópica a cirugía abierta (raro).</li>
+      <li>Hallazgos inesperados que retrasan o cancelan la cirugía.</li>
+    </ul>
 
-<h2>Financial &amp; practical</h2>
-<ul>
-  <li>Evaluation/surgery usually covered; travel and lost wages vary.</li>
-  <li>Insurance questions (life/disability) may reference donation—clarify ahead of time.</li>
-</ul>
+    <h2>Largo plazo</h2>
+    <ul>
+      <li><strong>Función renal:</strong> el riñón restante compensa; el riesgo de enfermedad renal a lo largo de la vida es ligeramente mayor que si no hubieras donado.</li>
+      <li><strong>Presión arterial:</strong> puede elevarse con el tiempo — contrólala de forma periódica.</li>
+      <li><strong>Embarazo:</strong> ligero aumento del riesgo de preeclampsia en embarazos futuros.</li>
+      <li><strong>Salud mental:</strong> pueden aparecer cambios en el estado de ánimo si el curso es complicado; el apoyo ayuda.</li>
+    </ul>
 
-<div class="callout"><p><strong>Ask:</strong> What are this center’s complication rates? What’s <em>my</em> risk given age/BP/BMI? Who do I call after hours?</p></div>
+    <h2>Aspectos económicos y prácticos</h2>
+    <ul>
+      <li>La evaluación y la cirugía suelen estar cubiertas; viaje y salarios perdidos varían según el programa.</li>
+      <li>Los seguros (vida/discapacidad) pueden tener en cuenta la donación — acláralo con antelación.</li>
+    </ul>
 
-<p class="disclaimer">Informational only; discuss personal risks with your transplant team.</p>
+    <div class="callout">
+      <p><strong>Preguntas para el equipo:</strong> ¿Cuáles son las tasas de complicaciones de este centro? ¿Cuál es <em>mi</em> riesgo según edad/PA/IMC? ¿A quién llamo fuera del horario?</p>
+    </div>
+
+    <p class="disclaimer">Información educativa; comenta tus riesgos personales con tu centro de trasplantes.</p>
   </main>
   <div data-include="/includes_es/footer.html"></div>
   <script src="/scripts/analytics.js" defer></script>
