--- a/es/hub/donation/testing.html
+++ b/es/hub/donation/testing.html
@@ -12,7 +12,8 @@
   </script>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Evaluation & Testing - Kidney Donation Hub</title>
+  <title>Evaluación y pruebas — Centro de Donación | Tito Necesita un Riñón</title>
+  <meta name="description" content="Cómo funciona la evaluación del donante: compatibilidad, fases del estudio, cronograma, costos y preparación. Explicado en lenguaje claro." />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
@@ -24,90 +25,91 @@
   <div data-include="/includes_es/header.html"></div>
   <main class="content" id="main">
     <div data-include="/includes_es/donation-subnav.html"></div>
-<h1>Evaluation &amp; Testing</h1>
-<p>The donor work-up checks kidney health, overall fitness, and readiness—medically and emotionally. You can pause or stop at any time; your reasons stay private with the transplant team.</p>
 
-<h2>How matching works (quick primer)</h2>
-<ul>
-  <li><strong>Blood type (ABO):</strong> Some types match easily (O donates to anyone), others may need a swap program.</li>
-  <li><strong>HLA typing:</strong> A genetic “fingerprint” the immune system uses to recognize tissue.</li>
-  <li><strong>Crossmatch:</strong> Mixes donor cells/serum with the recipient’s to see if there’s a reaction.
+    <h1>Evaluación y pruebas</h1>
+    <p>El estudio del donante verifica la salud renal, el estado general y la preparación — médica y emocional. Puedes pausar o detener el proceso en cualquier momento; tus razones permanecen privadas con el equipo de trasplante.</p>
+
+    <h2>Cómo funciona la compatibilidad (resumen rápido)</h2>
     <ul>
-      <li><em>Negative crossmatch</em> → generally compatible.</li>
-      <li><em>Positive crossmatch</em> → usually incompatible; a paired exchange or desensitization may be discussed.</li>
+      <li><strong>Grupo sanguíneo (ABO):</strong> algunos grupos combinan con más facilidad (O puede donar a cualquiera); otros pueden requerir un programa de intercambio.</li>
+      <li><strong>Tipificación HLA:</strong> una “huella” genética que el sistema inmune usa para reconocer tejidos.</li>
+      <li><strong>Crossmatch (prueba de compatibilidad):</strong> mezcla células/suero del donante con las del receptor para ver si hay reacción.
+        <ul>
+          <li><em>Crossmatch negativo</em> → generalmente compatible.</li>
+          <li><em>Crossmatch positivo</em> → por lo general incompatible; se puede hablar de intercambio pareado o desensibilización.</li>
+        </ul>
+      </li>
     </ul>
-  </li>
-</ul>
 
-<h2>Phases of evaluation</h2>
-<h3>1) Pre-screen</h3>
-<ul>
-  <li>Health questionnaire &amp; phone call with a coordinator/ILDA (Independent Living Donor Advocate).</li>
-  <li>Local labs: blood type, basic kidney and urine tests. Sometimes a 24-hour urine collection.</li>
-</ul>
+    <h2>Fases de la evaluación</h2>
+    <h3>1) Preselección</h3>
+    <ul>
+      <li>Cuestionario de salud y llamada con un coordinador/a o la/el <strong>ILDA</strong> (Defensor/a Independiente del Donante Vivo).</li>
+      <li>Análisis locales: grupo sanguíneo, pruebas básicas de riñón y orina. A veces, recolección de orina de 24 horas.</li>
+    </ul>
 
-<h3>2) Full work-up (often 1–2 clinic days)</h3>
-<ul>
-  <li><strong>Kidney function:</strong> creatinine/eGFR; sometimes a <em>measured GFR</em> for precision.</li>
-  <li><strong>Urine testing:</strong> protein/albumin, microscopic exam; 24-hour collection if needed.</li>
-  <li><strong>Imaging:</strong> CT angiography of both kidneys (looks at arteries/veins, anatomy) to plan which kidney to remove.</li>
-  <li><strong>Heart &amp; lungs:</strong> EKG; chest X-ray; stress test if age/risk factors suggest it.</li>
-  <li><strong>Infectious disease &amp; metabolic labs:</strong> standard screening; glucose/A1c, lipids, etc.</li>
-  <li><strong>Consults:</strong> nephrologist, surgeon, social worker, dietitian, and psychologist/psychiatrist.</li>
-  <li><strong>Women of child-bearing potential:</strong> pregnancy test; up-to-date cancer screening per guidelines (Pap, mammogram, colonoscopy based on age).</li>
-</ul>
+    <h3>2) Estudio completo (a menudo 1–2 días en clínica)</h3>
+    <ul>
+      <li><strong>Función renal:</strong> creatinina/eGFR; a veces <em>GFR medido</em> para mayor precisión.</li>
+      <li><strong>Orina:</strong> proteína/albumina, examen microscópico; 24 horas si se necesita.</li>
+      <li><strong>Imágenes:</strong> angio-TC de ambos riñones (arterias/venas y anatomía) para planear cuál retirar.</li>
+      <li><strong>Corazón y pulmones:</strong> ECG; radiografía de tórax; prueba de esfuerzo según edad/riesgos.</li>
+      <li><strong>Infecciosas y metabólicas:</strong> cribados estándar; glucosa/HbA1c, lípidos, etc.</li>
+      <li><strong>Consultas:</strong> nefrólogo/a, cirujano/a, trabajador/a social, dietista y psicólogo/a o psiquiatra.</li>
+      <li><strong>Mujeres con potencial reproductivo:</strong> prueba de embarazo; tamizajes oncológicos al día según edad (Papanicolau, mamografía, colonoscopia).</li>
+    </ul>
 
-<h3>3) Review &amp; decision</h3>
-<ul>
-  <li><strong>Approved:</strong> you’re medically cleared; surgery scheduling starts.</li>
-  <li><strong>Deferred:</strong> something needs attention (e.g., BP optimization, weight loss, repeat test).</li>
-  <li><strong>Declined:</strong> donation not recommended for your safety. Your reason remains confidential unless <em>you</em> choose to share it.</li>
-</ul>
+    <h3>3) Revisión y decisión</h3>
+    <ul>
+      <li><strong>Aprobado:</strong> quedas médicamente apto/a; se inicia la programación de la cirugía.</li>
+      <li><strong>Diferido:</strong> algo requiere atención (p. ej., optimizar PA, bajar de peso, repetir prueba).</li>
+      <li><strong>Rechazado:</strong> no se recomienda la donación por tu seguridad. El motivo es confidencial salvo que <em>tú</em> decidas compartirlo.</li>
+    </ul>
 
-<h2>If you’re incompatible</h2>
-<ul>
-  <li><strong>Paired exchange:</strong> you and your recipient swap with another pair.</li>
-  <li><strong>Non-directed donation + priority for your recipient:</strong> some programs allow a non-directed donation that benefits your intended recipient via a chain.</li>
-</ul>
+    <h2>Si eres incompatible</h2>
+    <ul>
+      <li><strong>Intercambio pareado:</strong> tú y tu receptor/a intercambian con otra pareja.</li>
+      <li><strong>Donación no dirigida + prioridad para tu receptor/a:</strong> algunos programas permiten iniciar una cadena que beneficie a tu persona objetivo.</li>
+    </ul>
 
-<h2>Timeline</h2>
-<p>Many centers finish evaluation in <strong>1–3 months</strong>. Fast-tracks exist for urgent cases; complex findings can add time (extra imaging, repeat labs, consults).</p>
+    <h2>Cronograma</h2>
+    <p>Muchos centros completan la evaluación en <strong>1–3 meses</strong>. Existen vías rápidas; hallazgos complejos pueden añadir tiempo (imágenes extra, repetición de pruebas, consultas).</p>
 
-<h2>Costs &amp; logistics</h2>
-<ul>
-  <li><strong>Medical bills:</strong> evaluation and surgery are usually covered by the recipient’s insurance through the transplant center.</li>
-  <li><strong>Travel &amp; time off:</strong> coverage varies; ask about reimbursements, lodging, and employer forms.</li>
-  <li><strong>Insurance questions:</strong> life/disability policies may ask about donation history—clarify before surgery.</li>
-</ul>
+    <h2>Costos y logística</h2>
+    <ul>
+      <li><strong>Gastos médicos:</strong> la evaluación y la cirugía normalmente las cubre el seguro del receptor a través del centro de trasplantes.</li>
+      <li><strong>Viaje y tiempo libre:</strong> la cobertura varía; pregunta por reembolsos, alojamiento y formularios para el empleador.</li>
+      <li><strong>Seguros:</strong> pólizas de vida/discapacidad pueden preguntar por la donación—aclara antes de la cirugía.</li>
+    </ul>
 
-<h2>How to prepare</h2>
-<ul>
-  <li>Bring a <strong>medication list</strong>, allergies, and past surgeries.</li>
-  <li>Follow fasting instructions for labs/imaging; drink water unless told otherwise.</li>
-  <li>Avoid new supplements; limit NSAIDs unless your team says they’re okay.</li>
-  <li>Wear comfortable clothes/shoes; expect lots of walking between departments.</li>
-</ul>
+    <h2>Cómo prepararte</h2>
+    <ul>
+      <li>Lleva una <strong>lista de medicamentos</strong>, alergias y cirugías previas.</li>
+      <li>Sigue instrucciones de ayuno para análisis/imágenes; bebe agua salvo indicación contraria.</li>
+      <li>Evita suplementos nuevos; limita AINE salvo que tu equipo los autorice.</li>
+      <li>Ropa y calzado cómodos; espera caminar bastante entre servicios.</li>
+    </ul>
 
-<h2>What to expect on “evaluation day”</h2>
-<ul>
-  <li>Check-in, blood/urine labs, EKG, chest X-ray.</li>
-  <li>CT scan block (contrast given for kidney imaging).</li>
-  <li>Visits with nephrologist, surgeon, social worker, dietitian, ILDA.</li>
-  <li>Plan on 6–8 hours; bring a snack and questions.</li>
-</ul>
+    <h2>Qué esperar el “día de evaluación”</h2>
+    <ul>
+      <li>Ingreso, análisis de sangre/orina, ECG y radiografía de tórax.</li>
+      <li>Bloque de TC (con contraste para las imágenes renales).</li>
+      <li>Visitas con nefrólogo/a, cirujano/a, trabajador/a social, dietista e ILDA.</li>
+      <li>Calcula 6–8 horas; lleva colación y preguntas.</li>
+    </ul>
 
-<div class="callout">
-  <p><strong>Ask your team:</strong></p>
-  <ul>
-    <li>Which tests can I do locally? Can we bundle others into one visit?</li>
-    <li>What BP, BMI, or lab cutoffs does this center use?</li>
-    <li>How often do you use paired exchange? What’s the usual wait?</li>
-    <li>What help is available for travel, lodging, or lost wages?</li>
-    <li>Who do I call after hours if I have a question or reaction to contrast?</li>
-  </ul>
-</div>
+    <div class="callout">
+      <p><strong>Preguntas para tu equipo:</strong></p>
+      <ul>
+        <li>¿Qué pruebas puedo hacer localmente? ¿Podemos agrupar el resto en una sola visita?</li>
+        <li>¿Qué límites de PA, IMC o laboratorio usa este centro?</li>
+        <li>¿Con qué frecuencia utilizan intercambio pareado? ¿Cuál es la espera habitual?</li>
+        <li>¿Qué ayuda hay para viaje, alojamiento o salarios perdidos?</li>
+        <li>¿A quién llamo fuera de horario si tengo dudas o una reacción al contraste?</li>
+      </ul>
+    </div>
 
-<p class="disclaimer">This page is informational and not medical advice. Policies and eligibility vary by center and your personal health history.</p>
+    <p class="disclaimer">Página informativa; no es asesoramiento médico. Las políticas y la elegibilidad dependen de tu centro y de tu historia clínica.</p>
   </main>
   <div data-include="/includes_es/footer.html"></div>
   <script src="/scripts/analytics.js" defer></script>
